test/negative/lex_unexpected_char.mut
# Negative: unexpected character
x: i64 = 5 @ 3
